--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -123,3 +123,31 @@
     user-select: none;
 }
 
+.loading {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    user-select: none;
+    width: 100%;
+    height: 100%;
+}
+
+.loading-nm {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    user-select: none;
+    width: 100%;
+    height: 100%;
+}
+
