--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -124,30 +124,51 @@
 }
 
 .loading {
-    position: absolute;
+    /* position: absolute; */
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    color: #8a4b0d;
     font-size: 3rem;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: bold;
     text-align: center;
     user-select: none;
     width: 100%;
-    height: 100%;
+    height: 650px;
+    backdrop-filter: blur(5px);
+    animation: fadeInOut 1.5s ease-in-out infinite;
 }
 
 .loading-nm {
-    position: absolute;
+    /* position: absolute; */
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: #8a4b0d;
     font-size: 3rem;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: bold;
     text-align: center;
     user-select: none;
     width: 100%;
-    height: 100%;
+    height: 650px;
+    backdrop-filter: blur(5px);
+    animation: fadeInOut 1.5s ease-in-out infinite;
+    background-color: #1A1A1A;
 }
+
+
+@keyframes fadeInOut {
+    0%, 100% { opacity: 0.5; }
+    50% { opacity: 1; }
+}
+
+
+
+
 
