--- a/src/components/Nightmode/NightModeToggle.css
+++ b/src/components/Nightmode/NightModeToggle.css
@@ -5,13 +5,18 @@
     width: 60px;
     height: 34px;
   }
-  
+  .siteTopbar{
+    height: 50px;
+    justify-content: center;
+    padding-top: 10px;
+    padding-left: 10px;
+  }
   .toggle-input {
     opacity: 0;
     width: 0;
     height: 0;
   }
-  
+    
   .toggle-slider {
     position: absolute;
     cursor: pointer;
