--- a/src/components/Administrator/administrator.css
+++ b/src/components/Administrator/administrator.css
@@ -222,3 +222,9 @@ select {
     -moz-appearance: none;
     appearance: none;
 }
+
+.linkContainer {
+    position: absolute;
+    bottom: 3%;
+    margin-left: 3%;
+}
